--- a/vignettes/articles/Models.Rmd
+++ b/vignettes/articles/Models.Rmd
@@ -8,102 +8,5 @@ output:
     toc: yes
 ---
 
-```{r ex_setup, include=FALSE}
-knitr::opts_chunk$set(
-  message = FALSE,
-  digits = 3,
-  collapse = TRUE,
-  comment = "#>"
-  )
-options(digits = 3)
-library(parsnip)
-library(discrim)
-library(tidymodels)
-library(cli)
-library(kableExtra)
-```
 
-`parsnip` contains wrappers for a number of models. For example, the `parsnip` function `rand_forest()` can be used to create a random forest model. The **mode** of a model is related to its goal. Examples would be regression and classification. 
-
-Since there are many models available in R, there are also "side packages" that wrap groups of models: 
-
- * [`discrim`](https://github.com/tidymodels/discrim) contains discriminant analysis models. 
-
-
-```{r model-table, include = FALSE}
-mod_names <- get_from_env("models")
-
-mod_list <- 
-  map_dfr(mod_names, ~ get_from_env(.x) %>% mutate(model = .x)) %>% 
-  distinct(mode, model) %>% 
-  mutate(model = paste0("`", model, "()`")) %>%
-  arrange(mode, model) %>%
-  group_by(mode) %>%
-  summarize(models = paste(model, collapse = ", "))
-```
-
-_How_ the model is created is related to the **engine**. In many cases, this is an R modeling package. In others, it may be a connection to an external system (such as Spark or Tensorflow). The tables below list the engines for each model type along with the type of prediction that it can make (see `predict.model_fit()`). 
-
-Models can be added by the user too. See the ["Making a {parsnip} model from scratch" vignette](Scratch.html).
-
-The list of models accessible via `parsnip` and `discrim` are listed below:
-
-
-## Classification Models
-
-```{r class-table, results = 'asis', echo = FALSE}
-map_dfr(mod_names, ~ get_from_env(paste0(.x, "_predict")) %>% mutate(model = .x)) %>% 
-  dplyr::filter(mode == "classification") %>% 
-  dplyr::select(model, engine, type) %>%
-  mutate(
-    type = paste0("`", type, "`"),
-    model = paste0("`", model, "()`"),
-    ) %>%
-  mutate(check = cli::symbol$tick) %>%
-  spread(type, check, fill =  cli::symbol$times) %>%
-  kable(format = "html") %>% 
-  kable_styling(full_width = FALSE) %>%
-  collapse_rows(columns = 1)
-```
-
-## Regression Models
-
-```{r pred-table, results = 'asis', echo = FALSE}
-map_dfr(mod_names, ~ get_from_env(paste0(.x, "_predict")) %>% mutate(model = .x)) %>% 
-  dplyr::filter(mode == "regression") %>% 
-  dplyr::select(model, engine, type) %>% 
-  mutate(
-    type = paste0("`", type, "`"),
-    model = paste0("`", model, "()`"),
-    ) %>%
-  mutate(check = cli::symbol$tick) %>%
-  spread(type, check, fill =  cli::symbol$times) %>%
-  kable(format = "html") %>% 
-  kable_styling(full_width = FALSE) %>%
-  collapse_rows(columns = 1)
-```
-
-
-## Parameter Mappings
-
-`parsnip` uses standardized parameter names to have some consistency between models and engines. The mapping between the `parsnip` arguments and their original names is: 
-
-```{r params, echo = FALSE, results = "asis"}
-library(tidyverse)
-envir <- parsnip::get_model_env()
-
-args <- 
-  ls(envir) %>% 
-  tibble(name = .) %>% 
-  filter(str_detect(name, "args")) %>% 
-  mutate(model = str_replace(name, "_args", ""),
-         args  = map(name, ~envir[[.x]])) %>% 
-  unnest(args) %>% 
-  select(model:original)
-
-library(DT)
-
-DT::datatable(args, filter = "top", style = 'bootstrap')
-```
-
-
+This list can now be found at [`tidymodels.org`](https://www.tidymodels.org/find/).
