--- a/man/rmd/decision-tree.Rmd
+++ b/man/rmd/decision-tree.Rmd
@@ -52,9 +52,20 @@ decision_tree() %>%
 
 ## Parameter translations
 
-The standardized parameter names in parsnip can be mapped to their original names in each engine that has main parameters:
+The standardized parameter names in parsnip can be mapped to their original names in each engine that has main parameters. Each engine typically has a different default value (shown in parentheses) for each parameter.
 
 ```{r echo = FALSE, results = "asis"}
+get_defaults_decision_tree <- function() {
+  tibble::tribble(
+    ~model,         ~engine,          ~parsnip,                ~original,  ~default,
+    "decision_tree", "rpart",      "tree_depth",               "maxdepth", get_arg("rpart", "rpart.control", "maxdepth"),
+    "decision_tree", "rpart",           "min_n",               "minsplit", get_arg("rpart", "rpart.control", "minsplit"),
+    "decision_tree", "rpart", "cost_complexity",                     "cp", get_arg("rpart", "rpart.control", "cp"),
+    "decision_tree",  "C5.0",           "min_n",               "minCases", get_arg("C50", "C5.0Control", "minCases"),
+    "decision_tree", "spark",      "tree_depth",              "max_depth", get_arg("sparklyr", "ml_decision_tree", "max_depth"),
+    "decision_tree", "spark",           "min_n", "min_instances_per_node", get_arg("sparklyr", "ml_decision_tree", "min_instances_per_node"),
+  )
+}
 parsnip::convert_args("decision_tree")
 ```
 
