--- a/man/rmd/multinom-reg.Rmd
+++ b/man/rmd/multinom-reg.Rmd
@@ -51,10 +51,21 @@ multinom_reg() %>%
 
 ## Parameter translations
 
-The standardized parameter names in parsnip can be mapped to their original names
-in each engine that has main parameters:
+The standardized parameter names in parsnip can be mapped to their original 
+names in each engine that has main parameters. Each engine typically has a 
+different default value (shown in parentheses) for each parameter.
 
 ```{r echo = FALSE, results = "asis"}
+get_defaults_multinom_reg <- function() {
+  tibble::tribble(
+    ~model,          ~engine,     ~parsnip,            ~original,  ~default,
+    "multinom_reg",  "glmnet",    "mixture",              "alpha",  get_arg("glmnet", "glmnet", "alpha"),
+    "multinom_reg",  "spark",     "penalty",          "reg_param",  get_arg("sparklyr", "ml_logistic_regression", "reg_param"),
+    "multinom_reg",  "spark",     "mixture",  "elastic_net_param",  get_arg("sparklyr", "ml_logistic_regression", "elastic_net_param"),
+    "multinom_reg",  "keras",     "penalty",            "penalty",  get_arg("parsnip", "keras_mlp", "penalty"),
+    "multinom_reg",  "nnet",      "penalty",            "decay",    get_arg("nnet", "nnet.default", "decay"),
+  )
+}
 parsnip::convert_args("multinom_reg")
 ```
 
