--- a/man/rmd/svm-poly.Rmd
+++ b/man/rmd/svm-poly.Rmd
@@ -22,9 +22,20 @@ svm_poly() %>%
 ## Parameter translations
 
 The standardized parameter names in parsnip can be mapped to their original 
-names in each engine that has main parameters:
+names in each engine that has main parameters. Each engine typically has a 
+different default value (shown in parentheses) for each parameter.
 
 ```{r echo = FALSE, results = "asis"}
+## these values were manually checked :/ on 2020-05-28
+get_defaults_svm_poly <- function() {
+  tibble::tribble(
+    ~model,     ~engine,    ~parsnip,        ~original,  ~default,
+    "svm_poly", "kernlab",  "cost",          "C",        "1",
+    "svm_poly", "kernlab",  "degree",        "degree",   "1",
+    "svm_poly", "kernlab",  "scale_factor",  "scale",    "1",
+    "svm_poly", "kernlab",  "margin",        "epsilon",  "0.1",
+  )
+}
 parsnip::convert_args("svm_poly")
 ```
 
