--- a/man/rmd/mars.Rmd
+++ b/man/rmd/mars.Rmd
@@ -1,5 +1,8 @@
 # Engine Details
 
+```{r, child = "setup.Rmd", include = FALSE}
+```
+
 Engines may have pre-set default arguments when executing the model fit call. 
 For this type of model, the template of the fit calls are below.
 
@@ -37,6 +40,6 @@ get_defaults_mars <- function() {
     "mars",  "earth",     "prune_method",  "pmethod",  get_arg("earth", "earth.fit", "pmethod")[2]
   )
 }
-parsnip::convert_args("mars")
+convert_args("mars")
 ```
 
