--- a/man/rmd/mlp.Rmd
+++ b/man/rmd/mlp.Rmd
@@ -1,5 +1,8 @@
 # Engine Details
 
+```{r, child = "setup.Rmd", include = FALSE}
+```
+
 Engines may have pre-set default arguments when executing the model fit call. 
 For this type of model, the template of the fit calls are below:
 
@@ -57,6 +60,6 @@ get_defaults_mlp <- function() {
     "mlp",   "nnet",   "epochs",          "maxit",         get_arg("nnet", "nnet.default", "maxit"),
   )
 }
-parsnip::convert_args("mlp")
+convert_args("mlp")
 ```
 
