--- a/man/rmd/multinom-reg.Rmd
+++ b/man/rmd/multinom-reg.Rmd
@@ -1,5 +1,8 @@
 # Engine Details
 
+```{r, child = "setup.Rmd", include = FALSE}
+```
+
 Engines may have pre-set default arguments when executing the model fit call. 
 For this type of model, the template of the fit calls are below.
 
@@ -66,6 +69,6 @@ get_defaults_multinom_reg <- function() {
     "multinom_reg",  "nnet",      "penalty",            "decay",    get_arg("nnet", "nnet.default", "decay"),
   )
 }
-parsnip::convert_args("multinom_reg")
+convert_args("multinom_reg")
 ```
 
