--- a/man/rmd/svm-poly.Rmd
+++ b/man/rmd/svm-poly.Rmd
@@ -1,5 +1,8 @@
 # Engine Details
 
+```{r, child = "setup.Rmd", include = FALSE}
+```
+
 Engines may have pre-set default arguments when executing the model fit call. 
 For this type of model, the template of the fit calls are below:
 
@@ -36,6 +39,6 @@ get_defaults_svm_poly <- function() {
     "svm_poly", "kernlab",  "margin",        "epsilon",  "0.1",
   )
 }
-parsnip::convert_args("svm_poly")
+convert_args("svm_poly")
 ```
 
