More clarity for link

--- a/README.Rmd
+++ b/README.Rmd
@@ -128,7 +128,7 @@ Data sets previously found in `parsnip` are now find in the `modeldata` package.
 
 This project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
 
-- For questions and discussions about tidymodels packages, modeling, and machine learning, [join us on RStudio Community](https://rstd.io/tidymodels-community).
+- For questions and discussions about tidymodels packages, modeling, and machine learning, please [post on RStudio Community](https://rstd.io/tidymodels-community).
 
 - If you think you have encountered a bug, please [submit an issue](https://github.com/tidymodels/parsnip/issues).
 
