updates for how many engines handle dummy variables (if at all)

--- a/man/rmd/boost-tree.Rmd
+++ b/man/rmd/boost-tree.Rmd
@@ -38,7 +38,7 @@ mod_param <-
   update(sample_size = sample_prop(c(0.4, 0.9)))
 ```
 
-Finally, note that `xgboost` models require that non-numeric predictors (e.g., factors) must be converted to dummy variables or some other numeric representation. 
+Finally, note that `xgboost` models require that non-numeric predictors (e.g., factors) must be converted to dummy variables or some other numeric representation. By default, when using `fit()` with `xgboost`, a one-hot encoding is used to convert factor predictors to indicator variables. 
 
 
 ## C5.0
@@ -50,8 +50,7 @@ boost_tree() %>%
   translate()
 ```
 
-Note that [C50::C5.0()] does not require factor predictors to be converted 
-to indicator variables. 
+Note that [C50::C5.0()] does not require factor predictors to be converted  to indicator variables. `fit()` does not affect the encoding of the predictor values (i.e. factors stay factors) for this model.
 
 ## spark
 
@@ -69,6 +68,7 @@ boost_tree() %>%
   translate()
 ```
 
+`fit()` does not affect the encoding of the predictor values (i.e. factors stay factors) for this model.
 
 ## Parameter translations
 
