--- a/man/rmd/decision-tree.Rmd
+++ b/man/rmd/decision-tree.Rmd
@@ -21,8 +21,7 @@ decision_tree() %>%
   translate()
 ```
 
-Note that [rpart::rpart()] does not require factor predictors to be converted 
-to indicator variables. 
+Note that [rpart::rpart()] does not require factor predictors to be converted  to indicator variables. `fit()` does not affect the encoding of the predictor values (i.e. factors stay factors) for this model
 
 ## C5.0
 
@@ -33,8 +32,7 @@ decision_tree() %>%
   translate()
 ```
 
-Note that [C50::C5.0()] does not require factor predictors to be converted 
-to indicator variables. 
+Note that [C50::C5.0()] does not require factor predictors to be converted to indicator variables. `fit()` does not affect the encoding of the predictor values (i.e. factors stay factors) for this model 
 
 ## spark
 
@@ -52,6 +50,7 @@ decision_tree() %>%
   translate()
 ```
 
+`fit()` does not affect the encoding of the predictor values (i.e. factors stay factors) for this model
 
 ## Parameter translations
 
