--- a/man/rmd/mars.Rmd
+++ b/man/rmd/mars.Rmd
@@ -22,8 +22,9 @@ mars() %>%
   translate()
 ```
 
-Note that, when the model is fit, the `earth` package only has its  namespace
-loaded. However, if `multi_predict` is used, the package is  attached.
+Note that, when the model is fit, the `earth` package only has its  namespace loaded. However, if `multi_predict` is used, the package is  attached. 
+
+Also, `fit()` passes the data directly to `earth::earth()` so that its formula method can create dummy variables as-needed. 
 
 
 ## Parameter translations
