--- a/man/rmd/boost-tree.Rmd
+++ b/man/rmd/boost-tree.Rmd
@@ -41,7 +41,7 @@ mod_param <-
 For this engine, tuning over `trees` is very efficient since the same model 
 object can be used to make predictions over multiple values of `trees`.  
 
-Finally, note that `xgboost` models require that non-numeric predictors (e.g., factors) must be converted to dummy variables or some other numeric representation. By default, when using `fit()` with `xgboost`, a one-hot encoding is used to convert factor predictors to indicator variables. 
+Finally, note that `xgboost` models require that non-numeric predictors (e.g., factors) must be converted to dummy variables or some other numeric representation. By default, when using `fit()` with `xgboost`, a one-hot encoding is used to convert factor predictors to indicator variables. In the classification mode, non-numeric outcomes (i.e., factors) are converted to numeric. For binary classification, the `event_level` argument of `set_engine()` can be set to either `"first"` or `"second"` to specify which level should be used as the event.
 
 
 ## C5.0
