Add LiblineaR engine to `logistic_reg()` (#429)
* Add LiblineaR engine for logistic_reg()

* Update docs, tests, NEWS for LiblineaR logistic_reg()

* Update NEWS

* Add docs about LiblineaR regularizing intercept

* Change test to engine arg of bias

* Update man/rmd/logistic-reg.Rmd

Co-authored-by: Max Kuhn <mxkuhn@gmail.com>

* Redocument

* Test logistic_reg for varying() penalty

Co-authored-by: Max Kuhn <mxkuhn@gmail.com>

--- a/man/rmd/logistic-reg.Rmd
+++ b/man/rmd/logistic-reg.Rmd
@@ -33,6 +33,22 @@ multiple  penalties, the `multi_predict()` function can be used. It  returns a
 tibble with a list column called `.pred` that contains  a tibble with all of the
 penalty results.
 
+## LiblineaR
+
+```{r liblinear-reg}
+logistic_reg() %>% 
+  set_engine("LiblineaR") %>% 
+  set_mode("classification") %>% 
+  translate()
+```
+
+For `LiblineaR` models, the value for `mixture` can either be 0 (for ridge) or 1 
+(for lasso) but not other intermediate values. In the `LiblineaR` documentation, 
+these correspond to types 0 (L2-regularized) and 6 (L1-regularized).
+
+Be aware that the `LiblineaR` engine regularizes the intercept. Other 
+regularized regression models do not, which will result in different parameter estimates.
+
 ## stan
 
 ```{r stan-reg}
@@ -81,6 +97,7 @@ get_defaults_logistic_reg <- function() {
   tibble::tribble(
     ~model,          ~engine,     ~parsnip,            ~original,  ~default,
     "logistic_reg",  "glmnet",    "mixture",              "alpha",  get_arg("glmnet", "glmnet", "alpha"),
+    "logistic_reg",  "LiblineaR", "mixture",              "type",   "0",
     "logistic_reg",  "spark",     "penalty",          "reg_param",  get_arg("sparklyr", "ml_logistic_regression", "reg_param"),
     "logistic_reg",  "spark",     "mixture",  "elastic_net_param",  get_arg("sparklyr", "ml_logistic_regression", "elastic_net_param"),
     "logistic_reg",  "keras",     "penalty",            "penalty",  get_arg("parsnip", "keras_mlp", "penalty"),
@@ -88,4 +105,3 @@ get_defaults_logistic_reg <- function() {
 }
 convert_args("logistic_reg")
 ```
-
