--- a/man/rmd/setup.Rmd
+++ b/man/rmd/setup.Rmd
@@ -1,4 +1,5 @@
 ```{r, include = FALSE}
+library(dials)
 convert_args <- function(model_name) {
   envir <- get_model_env()
 
@@ -39,4 +40,24 @@ get_arg <- function(ns, f, arg) {
   as.character(args[[arg]])
 }
 
+get_dials <- function(x) {
+  cl <- rlang::call2(x$fun, .ns = x$pgk)
+  rlang::eval_tidy(cl)
+}
+
+descr_models <- function(mod, eng) {
+  res <- get_from_env(mod) %>% 
+    dplyr::filter(engine == eng) %>% 
+    dplyr::distinct() %>% 
+    purrr::pluck("mode")
+  
+  if (length(res) == 1) {
+    txt <- "is a single mode:"
+  } else {
+    txt <- "are multiple modes:"
+  }
+  paste("For this engine, there", txt, knitr::combine_words(res))
+}
+
+options(width = 80)
 ```
