--- a/man/rmd/linear-reg-lm.Rmd
+++ b/man/rmd/linear-reg-lm.Rmd
@@ -18,7 +18,7 @@ linear_reg() %>%
 
 ## Preprocessing requirements
 
-The only preprocessing required for this model is that factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data (if required).
+The only preprocessing required for this model is that factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data when required.
 
 ## Other details
 
